Enable archive download for release.

--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -22,6 +22,9 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_rpc_cors is defined %}
 --rpc-cors {{ substrate_node_rpc_cors }} \
 {% endif %}
+{% if substrate_node_rpc_methods is defined %}
+--rpc-methods {{ substrate_node_rpc_methods }} \
+{% endif %}
 {% if substrate_node_prometheus_disable is true %}
 --no-prometheus \
 {% endif %}
@@ -31,13 +34,13 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_prometheus_external is true and substrate_node_prometheus_disable is not true %}
 --prometheus-external \
 {% endif %}
---name "{{ substrate_node_friendly_name }}" \
 {% if substrate_node_pruning is defined %}
---pruning {{ substrate_node_pruning }}
+--pruning {{ substrate_node_pruning }} \
 {% endif %}
 {% if substrate_node_validator is true %}
---validator
+--validator \
 {% endif %}
+--name "{{ substrate_node_friendly_name }}"
 
 StandardOutput=syslog
 StandardError=syslog
