--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -1,5 +1,5 @@
 [Unit]
-Description={{ substrate_node_friendly_name }} {{ substrate_node_chain }} Node
+Description={{ substrate_node_friendly_name }} Node
 After=network.target
 
 [Service]
