--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -32,6 +32,9 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_rpc_methods | length %}
 --rpc-methods {{ substrate_node_rpc_methods }} \
 {% endif %}
+{% if substrate_node_identity | length %}
+--{{ substrate_node_identity }} \
+{% endif %}
 {% if substrate_node_prometheus_disable is true %}
 --no-prometheus \
 {% endif %}
