--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -17,7 +17,7 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_ws_port is defined %}
 --ws-port {{ substrate_node_ws_port }} \
 {% endif %}
-{% if substrate_node_ws_external is true and substrate_node_validator is false %}
+{% if substrate_node_ws_external is true %}
 --ws-external \
 {% endif %}
 {% if substrate_node_rpc_port is defined %}
