Fix archive deployment.

--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -54,7 +54,7 @@ ExecStart={{ substrate_node_bin_name }} \
 --force-authoring \
 --parachain-id {{ substrate_node_parachain_id }} \
 {% endif %}
---name "{{ substrate_node_friendly_name }}"
+--name "{{ substrate_node_friendly_name }}" \
 {% if substrate_node_role  | lower == "collator" %}
 -- \
 --execution wasm \
