--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -23,7 +23,7 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_rpc_port is defined %}
 --rpc-port {{ substrate_node_rpc_port }} \
 {% endif %}
-{% if substrate_node_rpc_external is true  and substrate_node_validator is false %}
+{% if substrate_node_rpc_external is true %}
 --rpc-external \
 {% endif %}
 {% if substrate_node_rpc_cors | length %}
@@ -47,15 +47,24 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_pruning | length %}
 --pruning {{ substrate_node_pruning }} \
 {% endif %}
-{% if substrate_node_validator is true %}
+{% if substrate_node_role | lower == "validator" %}
 --validator \
 {% endif %}
---name "{{ substrate_node_friendly_name }}"
+{% if substrate_node_role  | lower == "collator" %}
+--force-authoring \
+--parachain-id {{ substrate_node_parachain_id }} \
+{% endif %}
+--name "{{ substrate_node_friendly_name }}" \
+{% if substrate_node_role  | lower == "collator" %}
+-- \
+--execution wasm \
+--chain {{ substrate_node_collator_chain }}
+{% endif %}
 
-{% if substrate_node_logging == 'file' %}
+{% if substrate_node_logging | lower == 'file' %}
 StandardOutput=append:/var/log/{{ substrate_node_bin_name }}/stdout.log
 StandardError=append:/var/log/{{ substrate_node_bin_name }}/stderr.log
-{% elif substrate_node_custom_restart == 'syslog' %}
+{% elif substrate_node_logging | lower == 'syslog' %}
 StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier=​{{ substrate_node_bin_name }}
