--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -58,7 +58,18 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_role  | lower == "collator" %}
 -- \
 --execution wasm \
---chain {{ substrate_node_collator_chain }}
+{% if substrate_node_collator_chain | length %}
+--chain {{ substrate_node_collator_chain }} \
+{% endif %}
+{% if substrate_node_collator_bootnodes | length %}
+--bootnodes {{ substrate_node_collator_bootnodes }} \
+{% endif %}
+{% if substrate_node_collator_p2p_port | length %}
+--port {{ substrate_node_collator_p2p_port }} \
+{% endif %}
+{% if substrate_node_collator_ws_port | length %}
+--ws-port {{ substrate_node_collator_ws_port }}
+{% endif %}
 {% endif %}
 
 {% if substrate_node_logging | lower == 'file' %}
