--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -35,6 +35,9 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_identity | length %}
 --{{ substrate_node_identity }} \
 {% endif %}
+{% if substrate_node_log_level | length %}
+--log {{ substrate_node_log_level }} \
+{% endif %}
 {% if substrate_node_prometheus_disable is true %}
 --no-prometheus \
 {% endif %}
