--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -54,6 +54,7 @@ ExecStart={{ substrate_node_bin_name }} \
 --validator \
 {% endif %}
 {% if substrate_node_role  | lower == "collator" %}
+--collator \
 --force-authoring \
 --parachain-id {{ substrate_node_parachain_id }} \
 {% endif %}
