--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -39,7 +39,7 @@ ExecStart={{ substrate_node_bin_name }} \
 --{{ substrate_node_identity }} \
 {% endif %}
 {% if substrate_node_execution | length %}
---{{ substrate_node_execution }} \
+--execution {{ substrate_node_execution }} \
 {% endif %}
 {% if substrate_node_log_level | length %}
 --log {{ substrate_node_log_level }} \
