--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -21,7 +21,7 @@ ExecStart={{ substrate_node_bin_name }} \
 --ws-port {{ substrate_node_ws_port }} \
 {% endif %}
 {% if substrate_node_force_runtime | length %}
---force-{{ substrate_node_force_runtime }}
+--force-{{ substrate_node_force_runtime }} \
 {% endif %}
 {% if substrate_node_ws_external is true %}
 --ws-external \
