--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -85,6 +85,12 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_collator_ws_port | length %}
 --ws-port {{ substrate_node_collator_ws_port }}
 {% endif %}
+{% if substrate_node_collator_rpc_port | length %}
+--ws-port {{ substrate_node_collator_rpc_port }}
+{% endif %}
+{% if substrate_node_collator_prometheus_port | length %}
+--ws-port {{ substrate_node_collator_prometheus_port }}
+{% endif %}
 {% endif %}
 
 {% if substrate_node_logging | lower == 'file' %}
