--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -20,6 +20,9 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_ws_port is defined %}
 --ws-port {{ substrate_node_ws_port }} \
 {% endif %}
+{% if substrate_node_force_runtime | length %}
+--force-{{ substrate_node_force_runtime }} \
+{% endif %}
 {% if substrate_node_ws_external is true %}
 --ws-external \
 {% endif %}
@@ -70,7 +73,7 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_role  | lower == "collator" %}
 -- \
 --execution wasm \
-{% if ssubstrate_node_collator_chain | length %}
+{% if substrate_node_collator_chain | length %}
 --chain {{ substrate_node_collator_chain }} \
 {% endif %}
 {% if substrate_node_collator_bootnodes | length %}
@@ -81,6 +84,12 @@ ExecStart={{ substrate_node_bin_name }} \
 {% endif %}
 {% if substrate_node_collator_ws_port | length %}
 --ws-port {{ substrate_node_collator_ws_port }}
+{% endif %}
+{% if substrate_node_collator_rpc_port | length %}
+--rpc-port {{ substrate_node_collator_rpc_port }}
+{% endif %}
+{% if substrate_node_collator_prometheus_port | length %}
+--prometheus-port {{ substrate_node_collator_prometheus_port }}
 {% endif %}
 {% endif %}
 
