--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -2,7 +2,7 @@
 
 [Unit]
 Description={{ substrate_node_friendly_name }} Node
-Documentation=https://standard.tech
+Documentation={{ substrate_node_documentation }}
 After=network-online.target
 Wants=network-online.target
 
