--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -11,7 +11,7 @@ ExecStart={{ substrate_node_bin_name }} \
 --base-path {{ substrate_node_data_dir }} \
 --port {{ substrate_node_p2p_port }} \
 {% if substrate_node_chain | length -%}--chain {{ substrate_node_chain }} \{% endif %}
-{% if substrate_node_bootnodes | length -%}--bootnodes {{ substrate_node_bootnodes }} \{%- endif %}
+{% if substrate_node_bootnodes | length %}--bootnodes {{ substrate_node_bootnodes }} \{%- endif %}
 {% if substrate_node_key | length -%}--node-key-file {{ _substrate_node_key_path }} \{% endif %}
 {% if substrate_node_ws_port is defined -%}--ws-port {{ substrate_node_ws_port }} \{% endif %}
 {% if substrate_node_force_runtime | length -%}--force-{{ substrate_node_force_runtime -}} \{%- endif %}
