Enables support for .zip archives, instead of only .tar.gz.

--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -69,7 +69,9 @@ ExecStart={{ substrate_node_bin_name }} \
 --collator \
 {% endif %}
 --force-authoring \
+{% if substrate_node_parachain_id | length %}
 --parachain-id {{ substrate_node_parachain_id }} \
+{% if substrate_node_parachain_id | length %}
 {% endif %}
 --name "{{ substrate_node_friendly_name }}" \
 {% if substrate_node_role  | lower == "collator" %}
