--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -69,7 +69,7 @@ ExecStart={{ substrate_node_bin_name }} \
 --collator \
 {% endif %}
 --force-authoring \
-{% if substrate_node_collator_parachain_id | length %}
+{% if substrate_node_collator_parachain_id is defined %}
 --parachain-id {{ substrate_node_collator_parachain_id }} \
 {% endif %}
 {% endif %}
@@ -82,16 +82,16 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_collator_bootnodes | length %}
 --bootnodes {{ substrate_node_collator_bootnodes }} \
 {% endif %}
-{% if substrate_node_collator_p2p_port | length %}
+{% if substrate_node_collator_p2p_port is defined %}
 --port {{ substrate_node_collator_p2p_port }} \
 {% endif %}
-{% if substrate_node_collator_ws_port | length %}
+{% if substrate_node_collator_ws_port is defined %}
 --ws-port {{ substrate_node_collator_ws_port }} \
 {% endif %}
-{% if substrate_node_collator_rpc_port | length %}
+{% if substrate_node_collator_rpc_port is defined %}
 --rpc-port {{ substrate_node_collator_rpc_port }} \
 {% endif %}
-{% if substrate_node_collator_prometheus_port | length %}
+{% if substrate_node_collator_prometheus_port is defined %}
 --prometheus-port {{ substrate_node_collator_prometheus_port }} \
 {% endif %}
 --execution wasm
