--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -79,6 +79,9 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_collator_chain | length %}
 --chain {{ substrate_node_collator_chain }} \
 {% endif %}
+{% if substrate_node_collator_force_runtime | length %}
+--force-{{ substrate_node_collator_force_runtime }} \
+{% endif %}
 {% if substrate_node_collator_bootnodes | length %}
 --bootnodes {{ substrate_node_collator_bootnodes }} \
 {% endif %}
