--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -61,6 +61,9 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_pruning | length %}
 --pruning {{ substrate_node_pruning }} \
 {% endif %}
+{% if substrate_node_telemetry_url | length %}
+--telemetry-url {{ substrate_node_telemetry_url }} \
+{% endif %}
 {% if substrate_node_role | lower == "validator" %}
 --validator \
 {% endif %}
