Fix state cache size CLI option.

--- a/templates/substrate-node.service.j2
+++ b/templates/substrate-node.service.j2
@@ -74,7 +74,7 @@ ExecStart={{ substrate_node_bin_name }} \
 {% if substrate_node_collator_force_authoring is true %}
 --force-authoring \
 {% endif %}
-{% if substrate_node_state_cache_size is defined %}
+{% if substrate_node_state_cache_size | length %}
 --state-cache-size {{ substrate_node_state_cache_size }} \
 {% endif %}
 {% if substrate_node_collator_parachain_id | length %}
